Improved overall site text

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,8 @@
     justify-content: center;
   }
 
+ 
+
 .image-container{
     width:100%;
     text-align:center;
@@ -60,9 +62,31 @@
     width: 100%;
 }
 
-.feature-text {
+.feature-description {
+    font-family: 'Montserrat', sans-serif;
+    font-size:0.95rem;
+}
+
+.feature-title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.header-feature-text {
     background-color: rgba(255, 255, 255, 0.7);
     padding: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+}
+
+.feature-text {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+}
+
+#priceInfoDetails {
+    font-size: 12px;
 }
 
 .oddGridArea {
